@@ -53,6 +53,11 @@
       name="link.png"
       file="link.png"
       />
+ 	<browser:resource
+      name="link_icon.gif"
+      file="link_icon.gif"
+      />
+
 
  	<browser:resource
       name="smart_link.css"
