@@ -6,7 +6,11 @@ from zope.component import queryUtility
 from redturtle.smartlink.interfaces.utility import ISmartlinkConfig, ILinkNormalizerUtility
 from OFS.SimpleItem import SimpleItem
 from Products.CMFCore.utils import getToolByName
-from zope.app.component.hooks import getSite
+
+try:
+    from zope.app.component.hooks import getSite
+except ImportError:
+    from zope.component.hooks import getSite
 
 
 def rn_config_adapter(context):
